# schlepdep

./: Cargo.toml  README.md
.github/workflows/: aws-test.yml  build-dispatch-service.yml
dispatch-service/: Cargo.toml
dispatch-service/src/: main.rs
dispatch-service/src/operations/: complete_command.rs  describe_commands.rs  dispatch_commands.rs  heartbeat_command.rs  receive_commands.rs  start_command.rs
infrastructure/: Cargo.toml
src/: database.rs  errors.rs  main.rs  operations.rs  records.rs
src/operations/: complete_command.rs  delete_commands.rs  describe_command.rs  describe_commands.rs  dispatch_commands.rs  heartbeat_command.rs  receive_commands.rs  start_command.rs
